added a background image

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <title>Newlands Forest</title>
-        <link rel="stylesheet" href="css/stylesg.css">
+        <link rel="stylesheet" href="css/styles.css">
         <meta name="viewport" content="width=device-width">
     </head>
 
@@ -11,7 +11,7 @@
         <header id="top" class="main-header">
             <span class="main-title">Journey Through the Newlands Forest</span>
             <h1 class="main-heading">Natural Springs, Cape Town</h1>
-            <img class="arrow" src="img/arrow.svg" alt="Down arrow">
+            <!-- <img class="arrow" src="img/forrest_up.jpg" alt="Down arrow" width="150px" height="150px"> -->
         </header>
 
         <div class="primary-content">
