added new backgroung an footer image chanhe font in header an change achor colors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <meta name="viewport" content="width=device-width">
     </head>
 
-    <body>
+    <body><center>
+        <section class="everything">
+
         <header id="top" class="main-header">
             <span class="main-title">Journey Through the Newlands Forest</span>
             <h1 class="main-heading">Natural Springs, Cape Town</h1>
@@ -69,5 +71,7 @@
             <a href="#top">Back to top &raquo;</a>
         </footer>
     </body>
+    </center>
+    </section>
 
 </html>
