added links for wildlife animals

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
                 Newlands Forest is one of the most breathtaking attractions located in Cape Town. It's home to a number
                 of ski resorts, summer outdoor recreation, and tourist attractions.
             </p>
-            <a class="callout" href="#more">Find out more</a>
+            <a class="callout" href="https://en.wikipedia.org/wiki/Newlands_Forest">Find out more</a>
 
             <div class="wildlife">
                 <h2>Check out all the Wildlife</h2>
                 <p>
                     As spawning season approaches, the fish acquire a humpback and protuberant jaw. After spawning,
-                    they die and their carcasses provide a feast for gatherings of <a href="#cape-cobras">cape cobras</a>,
-                    <a href="#dassies">dassies</a>, and <a href="#eagles">bald eagles</a>.
+                    they die and their carcasses provide a feast for gatherings of <a href="https://en.wikipedia.org/wiki/Cobra">cape cobras</a>,
+                    <a href="https://en.wikipedia.org/wiki/Hyrax">dassies</a>, and <a href="https://en.wikipedia.org/wiki/Eagle">bald eagles</a>.
                 </p>
             </div><!-- End .wildlife -->
 
