change font size an color of h2 an ul added more hyperlinks.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </p>
             </div><!-- End .wildlife -->
 
-            <a class="callout" href="#wildlife">See the Wildlife</a>
+            <a class="callout" href="https://en.wikipedia.org/wiki/Wildlife_of_South_Africa">See the Wildlife</a>
         </div><!-- End .primary-content -->
 
         <div class="secondary-content">
@@ -44,14 +44,16 @@
                     in a tent, or relax like a king at a five star resort. Here are our top three resorts:
                 </p>
                 <ul>
-                    <li><a href="#hotels">Newlands Forest Resort Hotel</a></li>
-                    <li><a href="#resorts">South Newlands Forest Resorts</a></li>
-                    <li><a href="#lodging">Rhodes Memorial Resort Lodging</a></li>
+                    <li><a href="https://www.sa-venues.com/attractionswc/newlands-forest.php">Newlands Forest Resort Hotel</a></li>
+                    <li><a href="https://www.sa-venues.com/visit/acorntree/">South Newlands Forest Resorts</a></li>
+                    <li><a href="https://www.afristay.com/a/rhodes-memorial/">Rhodes Memorial Resort Lodging</a></li>
                 </ul>
             </div>
 
             <div class="tips">
-                <img src="img/mtn-landscape.jpg" alt="Mountain Landscape">
+
+                <img class="mountain1" src="img/mountain_view.jpg" alt="Mountain Landscape">
+           
                 <h3>Pack Accordingly</h3>
                 <p>
                     One of most important things when it comes to traveling through the great outdoors is packing
